# lingowale-report

./: .env.example  pyproject.toml
src/lingowale_daily/: __init__.py  analysis.py  config.py  jobs.py  main.py
src/lingowale_daily/feishu/: __init__.py
src/lingowale_daily/feishu/cards/: __init__.py  ad_report.py  combined_report.py  daily_report.py  payment_report.py
src/lingowale_daily/posthog/: __init__.py  normalize.py  queries.py
systemd/: lingowale-daily.service  lingowale-daily.timer
