[project]
name = "lingowale-daily"
version = "0.1.0"
description = "定时从 PostHog 拉指标 → 组飞书卡片 → 推到群"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic-settings>=2.0",
    "tenacity>=8.2",
    "anthropic>=0.40",
]

[project.scripts]
lingowale-daily = "lingowale_daily.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lingowale_daily"]
